--- a/html/main.html
+++ b/html/main.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <title>Волшебные миры</title>
-        <link rel="stylesheet" type="text/css" href="css\main_style.css">
+        <link rel="stylesheet" type="text/css" href="C:\Users\МАША\Documents\учеба\3 курс 6 сем\веб\курсовая\css\main_style.css">
         <meta http-equiv="Content-type" content="text/html">
         <meta charset="utf-8">
     </head>
